--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@ html {
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  padding: 0;
 }
 
 h1,
@@ -109,6 +108,8 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 .content__list-item:not(:last-child) {
@@ -197,6 +198,7 @@ fieldset {
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
+  padding: 0;
 }
 
 .search-form__checkbox-list {
@@ -222,8 +224,7 @@ fieldset {
   font-weight: 700;
   color: #fff;
   height: 34px;
-  cursor: pointer;
-}
+ }
 
 .search-form__submit-button {
   width: 194px;
@@ -255,10 +256,11 @@ fieldset {
   outline: none;
 }
 
-.search-form__label:hover {
-  text-decoration: none;
-  text-underline-offset: 4px;
+.search-form__label:hover  {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
+
 
 .button:focus {
   outline: none;
@@ -296,3 +298,4 @@ fieldset {
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
+
